# rust-cross-platform

./: .gitignore  README.md
android/Greetings/app/: build.gradle
android/Greetings/app/src/androidTest/java/com/mozilla/greetings/: ExampleInstrumentedTest.kt
android/Greetings/app/src/main/: AndroidManifest.xml
android/Greetings/app/src/main/java/com/mozilla/greetings/: GreetingsActivity.kt  RustGreetings.kt
android/Greetings/app/src/main/res/layout/: activity_greetings.xml
android/Greetings/app/src/test/java/com/mozilla/greetings/: ExampleUnitTest.kt
cargo/: Cargo.toml
cargo/src/: lib.rs
ios/Greetings/Greetings/: AppDelegate.swift  Greetings-Bridging-Header.h  RustGreetings.swift  ViewController.swift
ios/Greetings/Greetings.xcodeproj/: project.pbxproj
ios/Greetings/Greetings.xcodeproj/project.xcworkspace/xcuserdata/travis.xcuserdatad/: UserInterfaceState.xcuserstate
ios/Greetings/Greetings/Greetings.xcdatamodeld/: .xccurrentversion
ios/Greetings/GreetingsTests/: GreetingsTests.swift
