[package]
name = "greetings"
version = "0.1.1"
authors = ["Travis Long <trav.long79@gmail.com>"]
edition = "2018"
publish = false

[target.'cfg(target_os="android")'.dependencies]
jni = { version = "0.5", default-features = false }

[lib]
name = "greetings"
crate-type = ["staticlib", "cdylib", "dylib"]

[dependencies]
